src/objects/DirectoryApi__Directory__c.object
<CustomObject>
    <description>This object is used for the creation and management of directories to be displayed to site users.</description>
    <fields>
        <fullName>DirectoryApi__Badge_types_filter__c</fullName>
        <description>User defined badge types</description>
        <inlineHelpText>User defined badge types</inlineHelpText>
        <label>Badge types filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Criteria_Type__c</fullName>
        <description>This field defines the type of criteria used to filter the results of the directory.</description>
        <inlineHelpText>This field defines the type of criteria used to filter the results of the directory.</inlineHelpText>
        <label>Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Badge Type</fullName>
                    <default>true</default>
                    <label>Badge Type</label>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DirectoryApi__Criteria__c</fullName>
        <description>Defines the badge or the criteria used to filter the full list of possible results in the directory</description>
        <inlineHelpText>Defines the badge or the criteria used to filter the full list of possible results in the directory</inlineHelpText>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Directory_Object__c</fullName>
        <description>Defines the object which stores the records to be displayed in the directory.</description>
        <inlineHelpText>Defines the object which stores the records to be displayed in the directory.</inlineHelpText>
        <label>Directory Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DirectoryApi__Display_Results__c</fullName>
        <description>Defines the maximum number of results that will be returned on one page after a search is entered in the directory.</description>
        <inlineHelpText>Defines the maximum number of results that will be returned on one page after a search is entered in the directory.</inlineHelpText>
        <label>Display Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Email_Me_From_Address__c</fullName>
        <description>The email in this field defines the From email address to appear in the recipients email.</description>
        <inlineHelpText>The email in this field defines the From email address to appear in the recipients email.</inlineHelpText>
        <label>Email Me - From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Email_Me_To_Address_API_Field__c</fullName>
        <description>Define the API name of the email field you wish to populate the To field when using the Email Me feature of the directory.</description>
        <inlineHelpText>Define the API name of the email field you wish to populate the To field when using the Email Me feature of the directory.</inlineHelpText>
        <label>Email Me - To Address API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Email_Template__c</fullName>
        <description>Provide the Email Template you wish to use for directory communication</description>
        <inlineHelpText>Provide the Email Template you wish to use for directory communication</inlineHelpText>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this directory.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this directory.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Enable_Email_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, directory visitors will be able to contact members of the directory by clicking the Email Me button that appears on the member profile.</description>
        <inlineHelpText>When checked, directory visitors will be able to contact members of the directory by clicking the Email Me button that appears on the member profile.</inlineHelpText>
        <label>Enable Email Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Enable_Profile_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this field, authenticated users will be able to navigate back to their profile to update their contact record.</description>
        <inlineHelpText>By checking this field, authenticated users will be able to navigate back to their profile to update their contact record.</inlineHelpText>
        <label>Enable Profile Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Instructional_Text__c</fullName>
        <description>Defines the instructional text to be displayed above the search filters in the directory.</description>
        <inlineHelpText>Defines the instructional text to be displayed above the search filters in the directory.</inlineHelpText>
        <label>Instructional Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Profile_Display_Name_Fields__c</fullName>
        <description>Defines the fields (csv) displayed on the directory entry&apos;s name in the Profile modal.</description>
        <inlineHelpText>Defines the fields (csv) displayed on the directory entry&apos;s name in the Profile modal.</inlineHelpText>
        <label>Profile Display Name Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Profile_Fields__c</fullName>
        <description>Defines the fields (csv) displayed in the Profile modal.</description>
        <inlineHelpText>Defines the fields (csv) displayed in the Profile modal.</inlineHelpText>
        <label>Profile Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Search_Fields__c</fullName>
        <description>Defines the fields (csv) to be used as search filters at the top of the directory.</description>
        <inlineHelpText>Defines the fields (csv) to be used as search filters at the top of the directory.</inlineHelpText>
        <label>Search Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DirectoryApi__Search_Results_Fields__c</fullName>
        <description>Defines the fields (csv) to be shown on search results.</description>
        <inlineHelpText>Defines the fields (csv) to be shown on search results.</inlineHelpText>
        <label>Search Results Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Member Directory</label>
    <listViews>
        <fullName>DirectoryApi__All</fullName>
        <columns>NAME</columns>
        <columns>DirectoryApi__Criteria__c</columns>
        <columns>DirectoryApi__Directory_Object__c</columns>
        <columns>DirectoryApi__Display_Results__c</columns>
        <columns>DirectoryApi__Email_Me_From_Address__c</columns>
        <columns>DirectoryApi__Email_Me_To_Address_API_Field__c</columns>
        <columns>DirectoryApi__Enable_Email_Me__c</columns>
        <columns>DirectoryApi__Enable_Profile_Link__c</columns>
        <columns>DirectoryApi__Profile_Display_Name_Fields__c</columns>
        <columns>DirectoryApi__Profile_Fields__c</columns>
        <columns>DirectoryApi__Search_Fields__c</columns>
        <columns>DirectoryApi__Search_Results_Fields__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>